# cnn_mnist_tinyML

./: CMakeLists.txt  README.md  cnn_mnist.c  mnist_cnn_int8_model.h  tflm_wrapper.cpp
